# slm-llm-grounding-playbook

./: .gitignore  ANTI_PATTERNS.md  FINE_TUNING.md  PLAYBOOK.md  README.md  REFERENCE_ARCHITECTURE.md
blog_assets/: social_copy.md
evaluation/: metrics.md  training_strategy.md
examples/: customer_support.md  emergency_dispatch.md  healthcare_intake.md
orchestration/: merge_rules.md  scheduler.md  trigger_rules.md
prompts/: llm_master_prompt.md  slm_fact_ledger_prompt.md
schemas/: prompt_packet.json  shared_ledger.json  tool_result.json
starter_sdk/python/: README.md  pyproject.toml
starter_sdk/python/src/slm_llm_grounding/: __init__.py  ledger.py  triggers.py
